force-app/main/default/objects/CCXR_Customer_Status__c/CCXR_Customer_Status__c.object-meta.xml
<CustomObject>
    <label>CCXR_Customer_Status</label>
    <nameField>
        <label>CCXR_Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CCXR_Customer_Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>