force-app/main/default/objects/CCXR_Customer_Status__c/fields/CCXR_Customer__c.field-meta.xml
<CustomField>
    <fullName>CCXR_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CCXR_Customer</label>
    <referenceTo>CCXR_Customer__c</referenceTo>
    <relationshipLabel>CCXR_Customer_Status</relationshipLabel>
    <relationshipName>CCXR_Customer_Status</relationshipName>
    <type>Lookup</type>
</CustomField>