force-app/main/default/objects/CCXR_Customer_Status__c/fields/Customer_Status_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Status_Number__c</fullName>
    <displayFormat>CSTN-{0000}</displayFormat>
    <label>Customer Status Number</label>
    <type>AutoNumber</type>
</CustomField>