force-app/main/default/objects/CCXR_Customer_Status__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Waiting</fullName>
            </value>
            <value>
                <fullName>Occupied Table</fullName>
            </value>
            <value>
                <fullName>Left</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>